# tic_tac_toe

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py  tic_tac_toe_model.py
src/: grid.py  model.py  view.py
tests/: test_grid.py  test_model.py
tic_tac_toe/: grid.py  model.py  view.py
