[tool.poetry]
name = "tic_tac_toe"
version = "0.1.0"
description = ""
authors = ["LeatherShark <84489415+LeatherShark@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.3"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
